# IEC104Sim

./: .gitignore  CHANGELOG.md  README.md  README_CN.md
.github/workflows/: release.yml
crates/iec104master-app/: Cargo.toml  tauri.conf.json
crates/iec104master-app/src/: commands.rs  lib.rs  state.rs
crates/iec104sim-app/: Cargo.toml  tauri.conf.json
crates/iec104sim-app/src/: commands.rs  lib.rs  update.rs
crates/iec104sim-core/: Cargo.toml
crates/iec104sim-core/src/: data_point.rs  decode.rs  lib.rs  log_collector.rs  master.rs  slave.rs
crates/iec104sim-core/tests/: control_e2e.rs  overlapping_ioa_interrogation.rs  protocol_state_machine.rs  tls_e2e.rs  tls_send_latency.rs  tls_version_negotiation.rs
crates/iec104sim-core/tests/common/: cert_gen.rs  mod.rs
docs/superpowers/plans/: 2026-04-27-bilingual-i18n.md
docs/superpowers/specs/: 2026-04-24-master-tls-version-selection-design.md  2026-04-27-bilingual-i18n-design.md
frontend/src/: App.vue  releaseNotes.ts  types.ts
frontend/src/components/: AboutDialog.vue  AppDialog.vue  BatchAddModal.vue  ConnectionTree.vue  DataPointModal.vue  DataPointTable.vue  LogPanel.vue  Toolbar.vue  ValuePanel.vue
frontend/src/composables/: useDialog.ts
frontend/src/constants/: asduTypes.ts
master-frontend/src/: App.vue  releaseNotes.ts  types.ts
master-frontend/src/components/: ConnectionTree.vue  DataTable.vue  LogPanel.vue  ParseFrameDialog.vue  RawSendDialog.vue  Toolbar.vue
scripts/: build-release-notes.mjs  build-release-notes.test.mjs  gen-update-manifest.mjs  gen-update-manifest.test.mjs
(+4 files in other folders)
