[package]
name = "iec104sim-app"
version = "1.0.12"
description = "IEC104Sim - IEC 60870-5-104 Slave Simulator"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "iec104sim_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
iec104sim-core = { path = "../iec104sim-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
