[package]
name = "iec104sim-core"
version = "1.0.6"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
rand = "0.8"
native-tls = "0.2"
tokio-native-tls = "0.3.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rcgen = "0.13"
tempfile = "3"
libc = "0.2"
chrono = "0.4"
